2005-12-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* po/es.po:
	  + New translation from Niv Altivanik (not finished).
	* t/t05-hooks.sh:
	  + clean a bit the test script, remove the verbose stuff.

2005-12-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* No more yes/no -> true/false
	* French translatio ok.

2005-12-12  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile:
	  + install po files
	* backup-manager:
	  + minor bug fix (call to bad function)
	* Removed most of "info -n" calls
	  + lib/actions.sh:
	  + lib/backup-methods.sh:
	  + lib/files.sh:
	  + lib/logger.sh:
	* po/Makefile:
	  + Much cleaner
	* po/fr.po
	  + New french version, complete.

2005-12-09  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + cleaned a bit the code.
	* backup-manager.conf.tpl:
	  + removed useless BM_BURNING conf key (BM_BURNING_METHOD is enough).
	* Updated the tests, new test for the hooks.

2005-12-06  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager-upload:
	  + chomp() the result of the shell command, better.
	* Renamed tests with understandable names.
	* t/t04-tarball-blacklist.sh:
	  + New test for reproducing bug #4, cannot reproduce...
	* t/testlib.sh:
	  + better paths for the lock and pid files.

2005-12-06  Alexis Sukrieh <sukria@backup-manager.org>

	* doc/user-guide.sgml:
	 + Chapter 3 is finished (well, remains a lot of typos but the main
	 structure is there).

2005-12-06  Alexis Sukrieh  <sukria@backup-manager.org>

	* Minor changes to the tests.
	  + t/confs/upload-rsync.conf
	  + t/t01.sh

2005-12-05  Jimmy Gredler  <jimmy@backup-manager.org>

	* t/confs/tarball-incremental.conf:
	  + Changed the tarball directory to $PWD
	* t/confs/tarball.conf:
	  + Changed the tarball directory to $PWD
	* t/confs/upload-global.conf:
	  + Create an upload directory if it doesn't exist
	* t/confs/upload-rsync.conf:
	  + Changed the rsync directory to $PWD
	  + Use the current user as  BM_UPLOAD_SSH_USER and the ssh identity